--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cosmic-plus/base",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Various base modules related to Stellar",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@cosmic-plus/jsutils": "^1.0.0",
+    "axios": "^0.18.0",
     "stellar-sdk": "^0.11.0"
   }
 }
