--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "standard --fix '**.js'"
+    "lint": "eslint --fix *.js"
   },
   "devDependencies": {
-    "standard": "^11.0.1"
+    "eslint": "^5.8.0"
   },
   "dependencies": {
     "@cosmic-plus/jsutils": "^1.5.0",
