Install prettier & lint

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix *.js"
+    "prettier": "prettier --write --no-semi '**.js' 'src/**.js' '**.json' '**.md'",
+    "eslint": "eslint --fix '**.js'",
+    "lint": "npm run prettier && npm run eslint"
   },
   "devDependencies": {
-    "eslint": "^5.12.1"
+    "eslint": "^5.12.1",
+    "prettier": "^1.16.4"
   },
   "dependencies": {
     "@cosmic-plus/jsutils": "^1.13.0",
