--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@cosmic-plus/base",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Various base modules related to Stellar",
   "author": "MisterTicot",
-  "repository": "github:cosmic-plus/node-base",
+  "homepage": "https://cosmic.plus/#view:js-base",
+  "repository": "github:cosmic-plus/js-base",
   "license": "MIT",
   "main": "src/index.js",
   "module": "es5/index.js",
@@ -16,16 +17,16 @@
     "watch": "babel --watch --delete-dir-on-start --out-dir es5 src"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "eslint": "^5.16.0",
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.4.5",
-    "@cosmic-plus/jsutils": "^2.0.1",
+    "@babel/runtime": "^7.5.5",
+    "@cosmic-plus/jsutils": "^2.0.2",
     "axios": "^0.19.0",
     "stellar-sdk": "^2.0.1"
   }
