Automate release procedure

--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "eslint": "eslint --fix 'src/*.js' '*.js'",
     "lint": "npm run prettier && npm run eslint",
     "build": "babel --delete-dir-on-start --out-dir es5 src",
-    "watch": "babel --watch --delete-dir-on-start --out-dir es5 src"
+    "watch": "babel --watch --delete-dir-on-start --out-dir es5 src",
+    "commit-release": "[ \"$version\" ] && git ci -am \"Release $version\"",
+    "tag-release": "[ \"$version\" ] && git tag -s \"$version\" -m \"Release $version\"",
+    "push-release": "git push && git push --tags",
+    "make-release": "npm run build && npm run commit-release",
+    "publish-release": "npm run tag-release && npm run push-release && npm publish"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
