internal Change: update package.json

--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "@cosmic-plus/base",
   "version": "2.0.5",
   "description": "Various base modules related to Stellar",
-  "author": "MisterTicot",
+  "author": "MisterTicot <mister.ticot@cosmic.plus>",
   "homepage": "https://cosmic.plus/#view:js-base",
   "repository": "github:cosmic-plus/js-base",
   "license": "MIT",
   "main": "src/index.js",
   "module": "es5/index.js",
+  "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prettier": "prettier --write --no-semi 'src/*.js' '*.js' '*.json' '*.md'",
-    "eslint": "eslint --fix 'src/*.js' '*.js'",
+    "prettier": "prettier --write --no-semi 'src/**/*.{js,json,md}' '*.{js,json,md}'",
+    "eslint": "eslint --fix 'src/**/*.js' '*.js'",
     "lint": "npm run prettier && npm run eslint",
     "build": "babel --delete-dir-on-start --out-dir es5 src",
-    "watch": "babel --watch --delete-dir-on-start --out-dir es5 src",
+    "watch": "babel --watch --out-dir es5 src",
     "commit-release": "[ \"$version\" ] && git ci -am \"Release $version\"",
     "tag-release": "[ \"$version\" ] && git tag -s \"$version\" -m \"Release $version\"",
-    "push-release": "git push && git push --tags",
+    "push-release": "git push --follow-tags",
     "make-release": "npm run build && npm run commit-release",
     "publish-release": "npm run tag-release && npm run push-release && npm publish"
   },
