meta Chore: merge the latest repository template

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf es5/.",
     "prettier": "prettier --write --no-semi 'src/**/*.{js,json,md}' '*.{js,json,md}'",
     "eslint": "eslint --fix 'src/**/*.js' '*.js'",
     "lint": "npm run prettier && npm run eslint",
-    "build": "babel --delete-dir-on-start --out-dir es5 src",
+    "build": "babel --out-dir es5 src",
     "watch": "babel --watch --out-dir es5 src",
     "commit-release": "[ \"$version\" ] && git ci -am \"Release $version\"",
     "tag-release": "[ \"$version\" ] && git tag -s \"$version\" -m \"Release $version\"",
