--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf es5/*",
-    "prettier": "prettier --write --no-semi 'src/**/*.{js,json,md}' '*.{js,json,md}'",
+    "prettier": "prettier --write --no-semi --trailing-comma none 'src/**/*.{js,json,md}' '*.{js,json,md}'",
     "eslint": "eslint --fix 'src/**/*.js' '*.js'",
     "lint": "npm run prettier && npm run eslint",
     "build": "babel --out-dir es5 src",
@@ -28,8 +28,8 @@
     "@babel/core": "^7.11.6",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "eslint": "^6.8.0",
-    "prettier": "^1.19.1"
+    "eslint": "^7.13.0",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
